# KaggleExperiments

./: .gitignore  README.md
FacebookV/: README.md
FacebookV/c++/: CMakeLists.txt  data.cpp  data.h  main.cpp  model.cpp  model.h  process_event.cpp  table.h
FacebookV/jupyter/: exploration.ipynb  gaussians.ipynb  histograms.ipynb  subsetting.ipynb  test_hist.ipynb
FacebookV/python/: facebook_v.py  process_batch.py  process_event.py
FacebookV/python/cpp/: compile.bat  compile.sh  gauss.cpp  gauss.def
MINST/: SimpleNN.py
MNIST-MLPack/: CMakeLists.txt  main.cpp
MNIST-MLPack/CMake/: FindMLPACK.cmake
Titanic/: ANOVAModel.ipynb  DNN_Titanic.ipynb  DataExploration.ipynb  DataExploration_Lite.ipynb  HierarchicalModel.ipynb  HierarchicalModel_2.ipynb  L1_FeaturesSelection.ipynb  README.md  Titanic.ipynb  Titanik_lite_version.ipynb
